# jenkins_mcp_server

./: .dockerignore  .env.template  .gitignore  .npmignore  CHANGELOG.md  README.md  __init__.py  __main__.py  cli.js  docker-compose.yml  dockerfile  jenkins_client.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml  release.yml
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  PERFORMANCE.md
src/: config.py
src/jenkins_mcp_server/: __init__.py  __main__.py  cache.py  config.py  jenkins_client.py  metrics.py  server.py  verbose.py  version.py
